ported to JPMS, setup proper Maven building
Setup JPMS, Made the install path finding more robust